documentation of authAPI completely provided & chat/ws documentation provided
